# test_task_komtek

./: Makefile  README.md  fill_database.py  pyproject.toml  setup.cfg  technical specification.md
services/: settings.py  urls.py
services/terminology/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
services/terminology/migrations/: 0001_initial.py  0002_alter_guide_description_alter_guide_short_name.py  0002_alter_guideversion_unique_together.py  0003_alter_guide_description_alter_guide_short_name.py  0003_remove_guideitem_version_guideversion_guide_item.py  0004_alter_guide_unique_together.py  0004_rename_guide_item_guideversion_guide_items.py  0005_alter_guide_version.py  0005_alter_guideversion_version.py  0006_alter_guide_options_alter_guideitem_options.py  0006_alter_guideversion_version.py  0007_alter_guideversion_version_and_more.py  0008_guideitem_non_empty_code.py  0009_guideitem_non_empty_value.py
services/terminology/tests/: mixins.py  test_models.py  test_views.py
