[tool.poetry]
name = "services"
version = "0.1.0"
description = ""
authors = ["akocur <akocur@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
wemake-python-styleguide = "^0.15.3"
pytest-cov = "^3.0.0"
django-extensions = "^3.1.5"
psycopg2-binary = "^2.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
